--- a/project-manager.html
+++ b/project-manager.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4493847002'>Job Application for Sales Enablement Program Manager at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493847002'>Job Application for Sales Enablement Program Manager at Twitch</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -228,7 +228,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://wtw.referrals.selectminds.com/jobs/project-manager-business-delivery-solutions-11993'>Project Manager - Business Delivery Solutions - Willis Towers Watson Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/project-manager-business-delivery-solutions-11993'>Project Manager - Business Delivery Solutions - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -374,7 +374,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -382,13 +382,13 @@
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
+<h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
 Construction Project Manager - CAPEX in Coral Springs, from Custom Executive Search, by John Barto
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
 
 Sr Project Manager IT | El Segundo, CA | Mattel
 
